# yastn_benchmarks

./: .gitignore  README.md  bench_contractions.py  bench_ctm.py  bench_ctmrg.py  bench_dmrg.py  pyproject.toml
input_shapes/: Heisenberg_U1_d=2_D=11_chi=242.json  Heisenberg_U1_d=2_D=12_chi=288.json  Heisenberg_U1_d=2_D=15_chi=450.json  Heisenberg_U1_d=2_D=2_chi=9.json  Heisenberg_U1_d=2_D=3_chi=16.json  Heisenberg_U1_d=2_D=4_chi=30.json  Heisenberg_U1_d=2_D=5_chi=47.json  Heisenberg_U1_d=2_D=6_chi=67.json  Heisenberg_U1_d=2_D=7_chi=95.json  Heisenberg_U1_d=2_D=8_chi=123.json  Heisenberg_U1_d=2_D=9_chi=159.json  Kagome_U1xU1_d=27_D=12_chi=144.json  export_shapes.py
models/: __init__.py  model_parent.py  model_yastn_DoublePepsTensor.py  model_yastn_DoublePepsTensor_fuse_layers.py  model_yastn_basic.py  model_yastn_basic_fused.py  model_yastn_contraction_1x1.py  model_yastn_contraction_2x2.py  model_yastn_contraction_2x2_measure.py  model_yastn_contraction_2x3.py  model_yastn_contraction_LxLy.py  model_yastn_contraction_parent.py  model_yastn_ctmrg.py  model_yastn_ctmrg_mp.py  model_yastn_ctmrg_parallel.py  model_yastn_double_layer.py  model_yastn_double_layer_precompute.py  model_yastn_fpeps.py  model_yastn_measure_ncon.py
results_dmrg/: times_dmrg.ipynb
results_dmrg/i9_10920/: itensor_U1_cpu1.txt  itensor_U1_cpu8.txt  tenpy_cons_Sz_sort_False_cpu1.txt  tenpy_cons_Sz_sort_False_cpu8.txt  yastn_U1_np126_cpu1.txt  yastn_U1_np126_cpu12.txt  yastn_U1_np126_nf_cpu1.txt  yastn_U1_np126_nf_cpu8.txt  yastn_U1_torch24_cpu1.txt  yastn_U1_torch24_cpu12.txt  (+6 more)
